--- a/i3/config
+++ b/i3/config
@@ -192,3 +192,5 @@ exec --no-startup-id dropbox start
 exec --no-startup-id copyq
 exec --no-startup-id flameshot
 exec --no-startup-id playerctld daemon
+exec --no-startup-id redshift
+exec --no-startup-id setxkbmap -layout gb
