--- a/alacritty.yml
+++ b/alacritty.yml
@@ -10,82 +10,70 @@ bell:
 selection:
   save_to_clipboard: true
 
-# Base16 Solarized Dark 256 - alacritty color config
-# Ethan Schoonover (modified by aramisgithub)
-colors:
-  # Default colors
-  primary:
-    background: '0x002b36'
-    foreground: '0x93a1a1'
+schemes:
+  solarized-light: &light
+    primary:
+      background: '#fdf6e3' # base3
+      foreground: '#657b83' # base00
 
-  # Colors the cursor will use if `custom_cursor_colors` is true
-  cursor:
-    text: '0x002b36'
-    cursor: '0x93a1a1'
+    # Cursor colors
+    cursor:
+      text:   '#fdf6e3' # base3
+      cursor: '#657b83' # base00
 
-  # Normal colors
-  normal:
-    black:   '0x002b36'
-    red:     '0xdc322f'
-    green:   '0x859900'
-    yellow:  '0xb58900'
-    blue:    '0x268bd2'
-    magenta: '0x6c71c4'
-    cyan:    '0x2aa198'
-    white:   '0x93a1a1'
+    # Normal colors
+    normal:
+      black:   '#073642' # base02
+      red:     '#dc322f' # red
+      green:   '#859900' # green
+      yellow:  '#b58900' # yellow
+      blue:    '#268bd2' # blue
+      magenta: '#d33682' # magenta
+      cyan:    '#2aa198' # cyan
+      white:   '#eee8d5' # base2
 
-  # Bright colors
-  bright:
-    black:   '0x657b83'
-    red:     '0xdc322f'
-    green:   '0x859900'
-    yellow:  '0xb58900'
-    blue:    '0x268bd2'
-    magenta: '0x6c71c4'
-    cyan:    '0x2aa198'
-    white:   '0xfdf6e3'
+    # Bright colors
+    bright:
+      black:   '#002b36' # base03
+      red:     '#cb4b16' # orange
+      green:   '#586e75' # base01
+      yellow:  '#657b83' # base00
+      blue:    '#839496' # base0
+      magenta: '#6c71c4' # violet
+      cyan:    '#93a1a1' # base1
+      white:   '#fdf6e3' # base3
 
-  indexed_colors:
-    - { index: 16, color: '0xcb4b16' }
-    - { index: 17, color: '0xd33682' }
-    - { index: 18, color: '0x073642' }
-    - { index: 19, color: '0x586e75' }
-    - { index: 20, color: '0x839496' }
-    - { index: 21, color: '0xeee8d5' }
+  solarized-dark: &dark
+    # Default colors
+    primary:
+      background: '#002b36' # base03
+      foreground: '#839496' # base0
 
-# Base16 Solarized Light - alacritty color config
-# Ethan Schoonover (modified by aramisgithub)
-xcolors:
-  # Default colors
-  primary:
-    background: '0xfdf6e3'
-    foreground: '0x586e75'
+    # Cursor colors
+    cursor:
+      text:   '#002b36' # base03
+      cursor: '#839496' # base0
 
-  # Colors the cursor will use if `custom_cursor_colors` is true
-  cursor:
-    text: '0xfdf6e3'
-    cursor: '0x586e75'
+    # Normal colors
+    normal:
+      black:   '#073642' # base02
+      red:     '#dc322f' # red
+      green:   '#859900' # green
+      yellow:  '#b58900' # yellow
+      blue:    '#268bd2' # blue
+      magenta: '#d33682' # magenta
+      cyan:    '#2aa198' # cyan
+      white:   '#eee8d5' # base2
 
-  # Normal colors
-  normal:
-    black:   '0xfdf6e3'
-    red:     '0xdc322f'
-    green:   '0x859900'
-    yellow:  '0xb58900'
-    blue:    '0x268bd2'
-    magenta: '0x6c71c4'
-    cyan:    '0x2aa198'
-    white:   '0x586e75'
+    # Bright colors
+    bright:
+      black:   '#002b36' # base03
+      red:     '#cb4b16' # orange
+      green:   '#586e75' # base01
+      yellow:  '#657b83' # base00
+      blue:    '#839496' # base0
+      magenta: '#6c71c4' # violet
+      cyan:    '#93a1a1' # base1
+      white:   '#fdf6e3' # base3
 
-  # Bright colors
-  bright:
-    black:   '0x839496'
-    red:     '0xcb4b16'
-    green:   '0xeee8d5'
-    yellow:  '0x93a1a1'
-    blue:    '0x657b83'
-    magenta: '0x073642'
-    cyan:    '0xd33682'
-    white:   '0x002b36'
-
-draw_bold_text_with_bright_colors: false
+colors: *dark
