--- a/i3/config
+++ b/i3/config
@@ -14,9 +14,6 @@ bar {
 # screen before suspend. Use loginctl lock-session to lock your screen.
 exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
 
-# NetworkManager
-exec --no-startup-id nm-applet
-
 # Mediakeys
 set $refresh_vol && pkill -SIGRTMIN+10 i3blocks
 bindsym XF86AudioRaiseVolume exec pactl set-sink-volume @DEFAULT_SINK@ +10% $refresh_vol
@@ -162,6 +159,10 @@ mode "$mode_system" {
 }
 bindsym $mod+Home mode "$mode_system"
 
+# Show a floating calc terminal with Mod+c
+for_window [instance="Alacritty" title="My Calculator"] floating enable
+bindsym $mod+c exec alacritty -t "My Calculator" -e calc
+
 ##### handle windows
 
 # Fix handing of popups
@@ -170,8 +171,6 @@ for_window [window_role="task_dialog"] floating enable
 
 # Application specific assignments
 for_window [class="Spotify"] move to workspace $ws3
-
-# assign [class="Alacritty"] 1
 assign [class="Slack"] 2
 assign [class="Todoist"] 2
 
@@ -184,8 +183,11 @@ exec slack
 exec spotify
 
 # Background apps
+exec --no-startup-id nm-applet
+exec --no-startup-id blueman-applet
 exec --no-startup-id dropbox start
 exec --no-startup-id copyq
 exec --no-startup-id flameshot
 exec --no-startup-id playerctld daemon
 exec --no-startup-id redshift-gtk
+exec --no-startup-id feh --randomize --bg-fill ~/Files/wallpapers/*
